corrected footer z-index

--- a/question1/style.scss
+++ b/question1/style.scss
@@ -242,6 +242,7 @@ $base-font-size: 2rem;
     .image-field{
         height:100%;
         width: 50%;
+        position: relative;
         
         img{
             width: 100%;
@@ -283,8 +284,11 @@ $base-font-size: 2rem;
     .feedback{
         position: absolute;
         width: min(400px,30%);
-        left: 20%;
         top: 70%;
+        left: 35%;
+        transform: translate(-50%,-50%);
+        // left: 20%;
+        // top: 70%;
         // height: 250px;
         // border: 1px solid red;
         padding: 1rem;
@@ -333,7 +337,7 @@ $base-font-size: 2rem;
     padding-left: 4rem;
     padding-right: 0;
     .feedback{
-        left: 45%;
+        left: 65%;
         // right: 20%;
     }
 }
@@ -405,6 +409,8 @@ $base-font-size: 2rem;
     gap: 1rem;
     margin-top: -50px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    // color: white;
+    background-color: white;
     z-index: 999;
 
     
